# Modelling-for-news-articles

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: README.md  dataset_manifest.json
data/raw/: news_articles_demo.csv  news_articles_evaluation.csv  news_articles_extended.csv
docs/: screenshots.md
scripts/: run_streamlit_dashboard.cmd
src/news_topic_analysis/: __init__.py  analytics.py  categorization.py  cli.py  collectors.py  dashboard.py  database.py  evaluation.py  models.py  pipeline.py  preprocessing.py  presentation_assets.py  sample_data.py  storage.py  topic_modeling.py
tests/: test_pipeline.py
